<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.project_1.MainActivity">

    <TextView
        style="@style/my_style"
        android:id="@+id/head"
        android:text="@string/head"
        android:layout_marginTop = "20dp"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@mipmap/sysu"
        app:layout_constraintTop_toBottomOf="@id/head"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        style="@style/my_style"
        android:id = "@+id/number"
        android:text="@string/number"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        style="@style/my_style"
        android:layout_width="0dp"
        android:id="@+id/edit_num"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintLeft_toRightOf="@+id/number"
        android:hint="@string/hint_1"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/number"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        style="@style/my_style"
        android:id="@+id/password"
        android:text = "@string/password"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/edit_num"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <EditText
        style="@style/my_style"
        android:layout_width="0dp"
        android:id="@+id/edit_password"
        app:layout_constraintTop_toBottomOf="@id/edit_num"
        app:layout_constraintLeft_toRightOf="@+id/password"
        android:hint="@string/hint_2"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/password"
        app:layout_constraintRight_toRightOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/edit_password"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >
        <RadioButton
            android:id="@+id/学生"
            style="@style/my_style"
            android:text="@string/学生"
            android:checked="true"
            android:layout_marginRight="10dp"/>
        <RadioButton
            style="@style/my_style"
            android:id="@+id/教职工"
            android:text="@string/教职工"/>
    </RadioGroup>

    <Button
        style="@style/my_style"
        android:id="@+id/button1"
        android:text="@string/登录"
        android:textColor="@color/white"
        android:background="@drawable/my_button"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/button2"/>

    <Button
        style="@style/my_style"
        android:id="@+id/button2"
        android:text="@string/注册"
        android:textColor="@color/white"
        android:background="@drawable/my_button"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        app:layout_constraintLeft_toLeftOf="@id/button1"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>
